2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed Bug 432658 - Incorrect completion
	  when calling an extension method from inside another extension
	  method.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorIndentation.cs: Fixed a bug in tab as reindent
	  command.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed 'Bug 431797 - Code completion
	  showing invalid options'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 431759 - Code
	  completion should not happen in #region directives'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryResolver.cs: fixed 'Bug 431764 - Completion doesn't
	  work in properties'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/NRefactoryParameterDataProvider.cs,
	  Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 432437 - No
	  completion when invoking delegates'.

2008-10-06  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: Updated xml comment tag
	  descriptions from ECMA 364.

2008-10-02  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 431462 - Code
	  completion generally unusable with with 'using' aliases'.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* CSharpBindingCompilerManager.cs: Track API.

2008-09-29  Michael Hutchinson <mhutchinson@novell.com> 

	* Gui/MemberCompletionData.cs: Fix NRE that broke completion.

2008-09-29  Lluis Sanchez Gual <lluis@novell.com> 

	* Autotools/CSharpAutotoolsSetup.cs: Fix bug #394501 - tarball
	  generated don't add -keyfile:<strong_name_file>.snk in MAKE command
	  in Makefile.in.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 430393 - "// test/"
	  generates <summary> comment'.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/MemberCompletionData.cs: moved obsolete members at the bottom of